--- a/README
+++ b/README
@@ -6,12 +6,12 @@ Requirements
 PyQt4, http://www.riverbankcomputing.com/
 Elixir, http://elixir.ematia.de/
 Audiolab, http://www.ar.media.kyoto-u.ac.jp/members/david/softwares/audiolab/
+PIL
 
 (
 just do 
-easy_install pyqt elixir scikits.audiolab
+easy_install pyqt elixir scikits.audiolab pil
 )
 
-+ some more for wavpack and mp3 support (todo)
-
 Copyright 2009-2010 Johannes Burström. GNU GPL v3.
+Icons from git://github.com/micho/Free-file-icons.git
